--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,9 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended"
+        "eslint:recommended"
+       // "plugin:@typescript-eslint/recommended",
+       // "plugin:react/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -14,8 +14,8 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint",
-        "react"
+       // "@typescript-eslint",
+       // "react"
     ],
     "rules": {
       "no-underscore-dangle": ["error",{"allow": ["_id"]}]
