--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "mongoose": "^7.4.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.48.0",
-    "eslint-plugin-react": "^7.33.2",
     "nodemon": "^3.0.1"
   },
   "name": "13--sprint",
@@ -22,7 +19,7 @@
     "lint": "npx eslint ."
   },
   "keywords": [],
-  "author": "",
+  "author": "Josh Semenov",
   "license": "ISC",
   "description": ""
 }
