--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,19 +4,13 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended"
+        "airbnb-base"
        // "plugin:@typescript-eslint/recommended",
        // "plugin:react/recommended"
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+        "ecmaVersion": "latest"
     },
-    "plugins": [
-       // "@typescript-eslint",
-       // "react"
-    ],
     "rules": {
       "no-underscore-dangle": ["error",{"allow": ["_id"]}]
     }
