--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.5"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1"
   },
   "name": "13--sprint",
   "version": "1.0.0",
