--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,16 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "airbnb-base"
-       // "plugin:@typescript-eslint/recommended",
-       // "plugin:react/recommended"
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest"
-    },
-    "rules": {
-      "no-underscore-dangle": ["error",{"allow": ["_id"]}]
-    }
+  "env": {
+      "browser": true,
+      "commonjs": true,
+      "es2021": true
+  },
+  "extends": [
+      "airbnb-base"
+  ],
+  "parserOptions": {
+      "ecmaVersion": "latest"
+  },
+  "rules": {
+    "no-underscore-dangle": ["error", {"allow": ["_id"]}]
+  }
 }
