--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint ."
+    "lint": "npx eslint  . --fix"
   },
   "keywords": [],
   "author": "Josh Semenov",
